Fix#50 - FavoriteService N+1 문제 해결